--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       </div>
     </header>
 
+    <section class="frame01 .frame01-active">
+      <div class="frame"><img src="img/frame01.svg" alt="" /></div>
+    </section>
+
     <!-- Section01 : Intro-Video -->
     <section class="section01">
       <div class="section01_container">
@@ -40,11 +44,13 @@
     <section class="section02">
       <div class="section02_container">
         <div class="surfing"><img src="img/s2-surfing.svg" alt="" /></div>
-        <div class="frame"><img src="img/frame01.svg" alt="" /></div>
-        <div class="does"><img src="img/s2-does.svg" alt="" /></div>
-        <div class="only"><img src="img/s2-only.svg" alt="" /></div>
+        
         <div class="video-wrapper">
           <video src="video/s2-video01.mp4" autoplay muted loop></video>
+        </div>
+        <div class="s2-title-group">
+          <div class="does"><img src="img/s2-does.svg" alt="" /></div>
+          <div class="only"><img src="img/s2-only.svg" alt="" /></div>
         </div>
         <svg id="s2-gopro" width="839" height="129" viewBox="0 0 839 129" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M78.9614 126.08H75.7614C19.1214 126.08 3.44141 95.1999 3.44141 71.0399C3.44141 67.1999 3.60141 63.8399 4.24141 59.5199C7.60141 36.3199 22.4814 2.87988 89.0414 2.87988H94.0014C158.961 2.87988 168.721 31.9999 167.761 48.1599H129.361C128.881 45.2799 126.481 31.1999 90.6414 31.1999C55.6014 31.1999 44.4014 46.7199 42.3214 61.9199C42.0014 64.3199 41.8414 65.9199 41.8414 68.1599C41.8414 83.6799 52.7214 97.1199 82.0014 97.1199C115.121 97.1199 127.601 83.9999 128.561 79.8399H82.8014L86.3214 57.2799H167.761L157.201 124H135.441C135.601 119.52 135.281 110.24 134.001 105.12C128.721 111.36 112.721 126.08 78.9614 126.08ZM254.643 126.08C189.843 126.08 176.723 94.5599 176.723 73.2799C176.723 69.5999 176.723 65.5999 177.523 59.8399C180.403 40.3199 190.323 2.87988 263.603 2.87988H270.483C334.803 2.87988 348.563 33.4399 348.563 54.8799C348.563 59.0399 348.403 63.3599 347.763 67.8399C344.723 88.3199 334.963 126.08 261.523 126.08H254.643ZM310.163 58.7199C310.163 45.5999 301.203 31.6799 265.843 31.6799C226.323 31.6799 216.883 49.2799 215.763 62.8799C215.603 64.9599 215.603 66.5599 215.603 68.3199C215.603 81.2799 223.443 97.1199 259.443 97.1199C298.323 97.1199 307.763 79.5199 309.683 65.1199C310.003 62.7199 310.163 60.9599 310.163 58.7199ZM386.859 124H350.539L369.419 4.95988H453.419C492.459 4.95988 505.099 19.6799 505.099 40.4799C505.099 59.6799 495.819 84.3199 447.659 84.3199H393.259L386.859 124ZM397.259 57.5999H447.499C460.939 57.5999 466.379 51.5199 466.379 43.0399C466.379 35.8399 461.579 31.9999 451.339 31.9999H401.419L397.259 57.5999ZM549.923 55.3599H605.283C617.283 55.3599 621.923 48.7999 621.923 42.3999C621.923 36.3199 618.403 31.9999 608.643 31.9999H553.763L549.923 55.3599ZM545.923 81.7599L539.203 124H502.883L521.763 4.95988H616.163C651.043 4.95988 660.963 18.2399 660.963 33.7599C660.963 52.1599 645.283 60.4799 634.723 63.5199C645.603 66.8799 655.043 74.3999 652.643 89.7599L649.443 109.76C648.163 118.24 649.123 121.28 649.603 123.2L649.443 124H612.483C611.843 122.72 611.363 120.96 612.163 116L614.243 102.88C616.483 88.7999 611.203 81.7599 592.803 81.7599H545.923ZM741.674 126.08C676.874 126.08 663.754 94.5599 663.754 73.2799C663.754 69.5999 663.754 65.5999 664.554 59.8399C667.434 40.3199 677.354 2.87988 750.634 2.87988H757.514C821.834 2.87988 835.594 33.4399 835.594 54.8799C835.594 59.0399 835.434 63.3599 834.794 67.8399C831.754 88.3199 821.994 126.08 748.554 126.08H741.674ZM797.194 58.7199C797.194 45.5999 788.234 31.6799 752.874 31.6799C713.354 31.6799 703.914 49.2799 702.794 62.8799C702.634 64.9599 702.634 66.5599 702.634 68.3199C702.634 81.2799 710.474 97.1199 746.474 97.1199C785.354 97.1199 794.794 79.5199 796.714 65.1199C797.034 62.7199 797.194 60.9599 797.194 58.7199Z" stroke="#F8F8F8" stroke-width="2"/>
@@ -422,17 +428,19 @@
 
 
     <!-- GSAP Libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"></script> -->
     <!-- GSAP ScrollTrigger -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollTrigger.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollTrigger.min.js"></script> -->
 
-    <!-- ScrollBar (원장님이 주신거) -->
+    <!-- GSAP (원장님이 주신거) -->
+    <script src="js/gsap.js"></script>
+    <script src="js/scrollTrigger.js"></script>
     <script src="js/scrollbar.js"></script>
 
     <!-- Splitting Plugin -->
     <script src="https://cdn.jsdelivr.net/npm/splitting@1.0.6/dist/splitting.min.js"></script>
 
-  
-    <script src="js/custom.js"></script>
+    <script src="js/main.js"></script>
+    
   </body>
 </html>
