--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       </section>
 
       <!-- FRAME -->
-      <section class="frame01 frame">
+      <!-- <section class="frame01 frame">
         <img src="img/frame01.svg" alt="" />
-      </section>
+      </section> -->
       <!-- <section class="frame02 frame">
         <img src="img/frame02.svg" alt="" />
       </section>
@@ -57,7 +57,9 @@
       <!-- Section01 : Intro-Video -->
       <section class="section01">
         <div class="section01_container">
-          <video src="video/s1-video.mp4" autoplay muted loop></video>
+          <div class="video_wrapper">
+            <video src="video/s1-video.mp4" autoplay muted loop></video>
+          </div>
           <div class="intro-logo">
             <img src="img/logo.svg" alt="" />
           </div>
@@ -241,7 +243,7 @@
           <div class="lets"><img src="img/s7-lets.svg" alt="" /></div>
           <div class="do"><img src="img/s7-do.svg" alt="" /></div>
           <div class="video-wrapper">
-            <video src="video/s7-video.mp4" autoplay muted loop></video>
+            <video src="video/s7-video_test.mp4" autoplay muted loop></video>
           </div>
         </div>
       </section>
@@ -282,10 +284,12 @@
           <div class="nail"><img src="img/s9-nail.svg" alt="" /></div>
           <div class="with"><img src="img/s9-with.svg" alt="" /></div>
           <div class="hind"><img src="img/s9-hind.svg" alt="" /></div>
-          <div class="img01"><img src="img/s9-img01.png" alt="" /></div>
-          <div class="img02"><img src="img/s9-img02.png" alt="" /></div>
-          <div class="img03"><img src="img/s9-img03.png" alt="" /></div>
-          <div class="img04"><img src="img/s9-img04.png" alt="" /></div>
+          <div class="imgs">
+            <div class="img01"><img src="img/s9-img01.png" alt="" /></div>
+            <div class="img02"><img src="img/s9-img02.png" alt="" /></div>
+            <div class="img03"><img src="img/s9-img03.png" alt="" /></div>
+            <div class="img04"><img src="img/s9-img04.png" alt="" /></div>
+          </div>
         </div>
       </section>
 
