--- a/horizontal/horizontal.html
+++ b/horizontal/horizontal.html
@@ -1,17 +1,33 @@
-<div class="firstContainer">
-  <h1>Testing horizontal scrolling w/ three sections</h1>
-  <h2>First Container</h2>
-</div>
-<div class="container">
-  <div class="description panel blue">
-    <div>
-      SCROLL DOWN
-      <div class="scroll-down"><div class="arrow"></div></div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="firstContainer">
+      <h1>Testing horizontal scrolling w/ three sections</h1>
+      <h2>First Container</h2>
     </div>
-  </div>
+    <div class="container">
+      <div class="description panel blue">
+        <div>
+          SCROLL DOWN
+          <div class="scroll-down"><div class="arrow"></div></div>
+        </div>
+      </div>
 
-  <section class="panel red">ONE</section>
-  <section class="panel orange">TWO</section>
-  <section class="panel purple">THREE</section>
-</div>
-<div class="lastContainer">Last Container</div>
+      <section class="panel red">ONE</section>
+      <section class="panel orange">TWO</section>
+      <section class="panel purple">THREE</section>
+    </div>
+    <div class="lastContainer">Last Container</div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
+    <!-- GSAP ScrollTrigger -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"></script>
+
+    <script src="custom.js"></script>
+  </body>
+</html>
