--- a/1215_backup/1215_index.html
+++ b/1215_backup/1215_index.html
@@ -69,7 +69,7 @@
         </div>
       </section>
 
-      <!-- Section02 : Branimg/frame01.svgd-Main -->
+      <!-- Section02 : Brand-Main -->
       <section class="section02">
         <div class="section02_container">
           <div class="surfing"><img src="img/s2-surfing.svg" alt="" /></div>
