--- a/index.html
+++ b/index.html
@@ -39,9 +39,18 @@
       </section>
 
       <!-- FRAME -->
-      <section class="frame01 frame">
+      <section class="frame-test frame">
+        <img src="img/frame.svg" alt="" />
+      </section>
+      <!-- <section class="frame01 frame">
         <img src="img/frame01.svg" alt="" />
       </section>
+      <section class="frame02 frame">
+        <img src="img/frame02.svg" alt="" />
+      </section>
+      <section class="frame03 frame">
+        <img src="img/frame03.svg" alt="" />
+      </section> -->
 
       <!-- Section01 : Intro-Video -->
       <section class="section01">
@@ -114,7 +123,6 @@
             <div class="here"><img src="img/s3-here.svg" alt="" /></div>
             <div class="you"><img src="img/s3-you.svg" alt="" /></div>
             <div class="around"><img src="img/s3-around.svg" alt="" /></div>
-            </div>
           </div>
 
           <!-- Below Contents -->
@@ -139,7 +147,7 @@
             </svg>
             <div class="for"><img src="img/s3-for.svg" alt="" /></div>
           </div>
-      </div>
+        </div>
       </section>
 
       <!-- Section04 : Cam-Intro-Video -->
@@ -157,12 +165,12 @@
           <div class="s05-title-g01">
             <div class="black"><img src="img/s5-black.svg" alt="" /></div>
             <div class="hero"><img src="img/s5-hero.svg" alt="" /></div>
-        </div>
-        <div class="s05-title-g02">
-          <div class="offi"><img src="img/s5-offi.svg" alt="" /></div>
-          <div class="of"><img src="img/s5-of.svg" alt="" /></div>
-          <div class="fun"><img src="img/s5-fun.svg" alt="" /></div>
-        </div>
+          </div>
+          <div class="s05-title-g02">
+            <div class="offi"><img src="img/s5-offi.svg" alt="" /></div>
+            <div class="of"><img src="img/s5-of.svg" alt="" /></div>
+            <div class="fun"><img src="img/s5-fun.svg" alt="" /></div>
+          </div>
         </div>
       </section>
 
@@ -172,7 +180,7 @@
         <section class="section06 panel">
           <div class="section06_container">
             <div class="video-wrapper">
-              <video src="video/video01.mp4" autoplay muted loop></video>
+              <video src="video/s6-video01.mp4" autoplay muted loop></video>
             </div>
             <div class="s6-title-g">
               <div class="five-stroke">
@@ -180,7 +188,7 @@
               </div>
               <div class="jaw"><img src="img/s6-jaw.svg" alt="" /></div>
               <div class="video"><img src="img/s6-video.svg" alt="" /></div>
-          </div>
+            </div>
           </div>
         </section>
 
@@ -217,7 +225,6 @@
           </div>
         </section>
       </div>
-
 
       <!-- Section07 : Cam-Detail-02 : LargerSensor -->
       <section class="section07">
@@ -356,14 +363,16 @@
 
       <!-- S15-Horizontal Container -->
       <div class="s15-container">
-            <!-- Section15 : Lens-Detail-03 : Vertical (Horizon) -->
+        <!-- Section15 : Lens-Detail-03 : Vertical (Horizon) -->
         <section class="section15 panel02">
           <div class="section15_container">
             <!-- S15-1 : Vertical Capture -->
             <div class="video-wrapper01">
               <video src="video/s15-video01.mp4" autoplay muted loop></video>
             </div>
-            <div class="vertical"><img src="img/s15-vertical.svg" alt="" /></div>
+            <div class="vertical">
+              <img src="img/s15-vertical.svg" alt="" />
+            </div>
             <div class="capture"><img src="img/s15-capture.svg" alt="" /></div>
             <div class="for"><img src="img/s15-for.svg" alt="" /></div>
             <div class="social"><img src="img/s15-social.svg" alt="" /></div>
@@ -463,7 +472,35 @@
           </div>
         </div>
       </section>
-    </div>
+
+      <!-- Section18 : Lens-Outro -->
+      <section class="section18">
+        <!-- <h1 class="text">GET THE EPIC POV</h1>
+        <h1 aria-hidden="true" class="text outline-text">GET THE EPIC POV</h1>
+        <h1 aria-hidden="true" class="text filter-text">GET THE EPIC POV</h1> -->
+
+        <div class="s18-text-group">
+          <div class="get"><img src="img/s18-get.svg" alt="" /></div>
+          <div class="shots"><img src="img/s18-shots.svg" alt="" /></div>
+          <div class="you"><img src="img/s18-you.svg" alt="" /></div>
+          <div class="always"><img src="img/s18-always.svg" alt="" /></div>
+        </div>
+
+        <div id="s18-wrapper">
+          <section id="s18-content">
+            <section class="s18-images">
+              <img data-speed="0.8" src="img/s18-img01.jpg" alt="" />
+              <img data-speed="0.9" src="img/s18-img02.jpg" alt="" />
+              <img data-speed="1" src="img/s18-img03.jpg" alt="" />
+              <img data-speed="1.1" src="img/s18-img04.jpg" alt="" />
+              <img data-speed="0.9" src="img/s18-img05.jpg" alt="" />
+              <img data-speed="1.2" src="img/s18-img06.jpg" alt="" />
+              <img data-speed="0.8" src="img/s18-img07.jpg" alt="" />
+              <img data-speed="1" src="img/s18-img08.jpg" alt="" />
+            </section>
+          </section>
+        </div>
+      </section>
 
       <!-- FOOTER -->
       <footer>
@@ -471,25 +508,39 @@
           <img src="img/footer-copy.svg" alt="" />
           <ul class="sns">
             <li>
-              <a href="#"><img src="img/icon-gopro.svg" alt="" /></a>
+              <a href="https://gopro.com/ko/kr" target="_blank"
+                ><img src="img/icon-gopro.svg" alt=""
+              /></a>
             </li>
             <li>
-              <a href="#"><i class="ri-instagram-line"></i></a>
+              <a href="https://instagram.com/GoPro" target="_blank"
+                ><i class="ri-instagram-line"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="ri-twitter-x-line"></i></a>
+              <a href="https://twitter.com/gopro" target="_blank"
+                ><i class="ri-twitter-x-line"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="ri-facebook-box-line"></i></a>
+              <a href="https://www.facebook.com/gopro" target="_blank"
+                ><i class="ri-facebook-box-line"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="ri-pinterest-line"></i></a>
+              <a href="https://www.pinterest.com/GoPro" target="_blank"
+                ><i class="ri-pinterest-line"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="ri-youtube-line"></i></a>
+              <a href="https://www.youtube.com/GoProCamera" target="_blank"
+                ><i class="ri-youtube-line"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><img src="img/icon-tictok.svg" alt="" /></a>
+              <a href="https://www.tiktok.com/@gopro" target="_blank"
+                ><img src="img/icon-tictok.svg" alt=""
+              /></a>
             </li>
           </ul>
         </div>
@@ -533,12 +584,13 @@
 
     <!-- Custom JS  -->
     <script src="js/custom.js"></script>
+
+    <!-- 가로스크롤 offset값 (JQuery) -->
     <script>
-      var offsetLeft = $('.section05_container').offset().left;
-      $(".s6-container").css('margin-left', offsetLeft);
-      var offsetLeft = $('.section14_container').offset().left;
-      $(".s15-container").css('margin-left', offsetLeft);
+      var offsetLeft = $(".section05_container").offset().left;
+      $(".s6-container").css("margin-left", offsetLeft);
+      var offsetLeft = $(".section14_container").offset().left;
+      $(".s15-container").css("margin-left", offsetLeft);
     </script>
-    
   </body>
 </html>
